// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Interaction with Card component should apply a special style when inside a Card component 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-15besnp-Divider-dividerVariants e1os1nwj0"
  />
  ,
</div>
`;

exports[`Divider Interaction with Card component should still be possible to pass a custom color 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-1ur2xkw-Divider-dividerVariants e1os1nwj0"
    color="hotpink"
  />
  ,
</div>
`;

exports[`Divider with content when 'variant' dotted is set should render correctly 1`] = `
<div
  className="css-dn6m7g-Divider-dividerVariants e1os1nwj0"
>
  <span>
    T-Shirt
  </span>
</div>
`;

exports[`Divider with content when empty props should render correctly 1`] = `
<div
  className="css-15besnp-Divider-dividerVariants e1os1nwj0"
>
  <span>
    T-Shirt
  </span>
</div>
`;

exports[`Divider without content when 'variant' dotted is set should render correctly 1`] = `
<div
  className="css-dn6m7g-Divider-dividerVariants e1os1nwj0"
/>
`;

exports[`Divider without content when empty props should render correctly 1`] = `
<div
  className="css-15besnp-Divider-dividerVariants e1os1nwj0"
/>
`;
